--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,3 @@
 REACT_APP_SERVICE = 'http://gisserver2'
 PUBLIC_URL='http://gisserver2/testreact/testbuild'
+REACT_APP_ROUTE_SERVICE = 'https://staging.nostramap.com/nostraWebService/api/MapNostra/Route/"'
