--- a/.env.development
+++ b/.env.development
@@ -1,1 +1,2 @@
 REACT_APP_SERVICE = 'http://localhost'
+REACT_APP_ROUTE_SERVICE = 'https://staging.nostramap.com/nostraWebService/api/MapNostra/Route/"'
