--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
+    "esri-loader": "^2.3.0",
+    "esri-loader-react": "^2.0.3",
     "husky": "^0.14.3",
     "jest-enzyme": "^6.0.0",
     "lint-staged": "^7.0.0",
