modified path public url

--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,2 @@
-REACT_APP_SERVICE = 'http://gisserver2'
-PUBLIC_URL='http://gisserver2/testreact/testbuild'
+REACT_APP_SERVICE = 'https://gdev.geotalent.co.th'
+PUBLIC_URL='https://gdev.geotalent.co.th/reacttest'
