--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,3 @@
 REACT_APP_SERVICE = 'https://gdev.geotalent.co.th'
-PUBLIC_URL='https://gdev.geotalent.co.th/reacttest'
+PUBLIC_URL='http://localhost/testreact'
+REACT_APP_FOLDER_APPLICATION='/testreact'
